# logc-libs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile.am  README.adoc  configure.ac
.gitlab-ci/: Dockerfile  release.sh
czmq/: Makefile.am  libczmq_logc.pc.in  libczmq_logc.version  log.c
event/: Makefile.am  libevent_logc.pc.in  libevent_logc.version  log.c
include/: czmq_logc.h
include/event2/: logc.h
tests/: Makefile.am  czmq.c  event.c
